// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ActionBar component should not render Action bar with passed parameters 1`] = `
.c8 {
  overflow: visible;
  font-size: 2rem;
  transition: all 100ms linear;
  cursor: inherit;
}

.c8 * {
  fill-opacity: 1;
  transition: all 100ms linear;
  fill: #607890;
}

.c10 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 600;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  text-align: initial;
  display: inline-block;
}

.c11 {
  margin: 0;
  color: inherit;
  font-size: 1.2rem;
  font-weight: 400;
  letter-spacing: 0rem;
  line-height: 1.6rem;
  text-align: initial;
  display: inline-block;
}

.c6 {
  border: none;
  position: relative;
  user-select: none;
  font-family: inherit;
  text-decoration: none;
  transition: all 100ms ease-out;
  padding: 0.8rem 2.4rem 1rem;
  border-radius: 0.8rem;
  display: inline-flex;
  justify-content: center;
  align-items: center;
}

.c6,
.c6 .c9,
.c6 .c7,
.c6 .c7 * {
  transition: all 100ms ease-out;
}

.c6:hover {
  cursor: pointer;
}

.c6:focus {
  outline: none;
}

.c6:disabled {
  cursor: not-allowed;
}

.c6:disabled {
  color: #98A7B7;
  background: #dfe4e9;
}

.c6:disabled .c7 * {
  fill: #98A7B7;
}

.c6:not(:disabled):not(:hover) {
  color: #ffffff;
  background: #3872D2;
}

.c6:not(:disabled):not(:hover) .c7 * {
  fill: #ffffff;
}

.c6:not(:disabled):active {
  color: #ffffff;
  background: #275093;
}

.c6:not(:disabled):active .c7 * {
  fill: #ffffff;
}

.c6:not(:disabled):not(:active):hover {
  color: #ffffff;
  background: #3061B3;
  box-shadow: 0 0.2rem 0.8rem rgba(48,97,179,0.35);
}

.c6:not(:disabled):not(:active):hover .c7 * {
  fill: #ffffff;
}

.c6 .c7+.c9 {
  margin-left: 0.8rem;
}

.c6 .c9+.c7 {
  margin-left: 0.8rem;
}

.c0 {
  position: relative;
  display: inline-flex;
}

.c2 {
  z-index: 4;
  position: absolute;
  bottom: calc(100% + 1.5rem);
  left: 50%;
  transform: translateX(-50%);
  border-radius: 0.8rem;
  padding: 1.5rem 2rem;
  box-shadow: 0 0.4rem 1.6rem rgba(176,188,200,0.5);
}

.c2::after {
  content: '';
  width: 0;
  height: 0;
  z-index: 4;
  position: absolute;
  border-left: 0.8rem solid transparent;
  border-right: 0.8rem solid transparent;
  border-top: 1rem solid;
}

.c2::after {
  transform: translateX(-50%);
  top: 100%;
  left: 50%;
}

.c1 {
  width: 100%;
}

.c3 {
  display: flex;
  align-items: center;
  justify-content: space-between;
  background: #3872D2;
  width: 100%;
  height: max-height;
  padding: 0;
  bottom: 0.6rem;
  transform: none;
  left: auto;
  box-shadow: 0 0.4rem 1.6rem rgba(48,97,179,0.2);
}

.c3::after {
  left: 2.4rem;
  border-top-color: #3872D2;
}

.c3>.c9 {
  margin-right: 1.6rem;
  color: #ffffff;
}

.c4 {
  display: flex;
  flex-flow: row wrap;
  width: 80%;
}

.c4>.c5 {
  margin: 0.8rem 1.6rem 0.8rem 0.8rem;
  border: 0.1rem solid #ffffff;
  height: 3.2rem;
}

.c4>.c5:not(:last-child)::before {
  content: '';
  position: absolute;
  left: calc(100% + 0.8rem);
  width: 0.1rem;
  height: 2.4rem;
  background: #dfe4e9;
  margin: auto;
  top: 0;
  bottom: 0;
}

.c4>:not(:first-child) {
  margin-left: 0;
}

<div>
  <div
    class="c0 c1"
  >
    <div
      class="c2 c3"
      placement="top"
    >
      <div
        class="c4"
      >
        <button
          class="c5 c6"
          edges="square"
          type="button"
          variant="solid"
        >
          <svg
            class="c7 c8"
            fill="none"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M2 12C2 6.48 6.48 2 12 2s10 4.48 10 10-4.48 10-10 10S2 17.52 2 12zm5 0c0 .55.45 1 1 1h8c.55 0 1-.45 1-1s-.45-1-1-1H8c-.55 0-1 .45-1 1z"
              fill="#000"
              fill-opacity=".54"
              fill-rule="evenodd"
            />
          </svg>
          <span
            class="c9 c10"
            textalign="initial"
            textcolor="inherit"
            textvariant="button2"
          >
            Test1
          </span>
        </button>
        <button
          class="c5 c6"
          edges="square"
          type="button"
          variant="solid"
        >
          <svg
            class="c7 c8"
            fill="none"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M2 12C2 6.48 6.48 2 12 2s10 4.48 10 10-4.48 10-10 10S2 17.52 2 12zm5 0c0 .55.45 1 1 1h8c.55 0 1-.45 1-1s-.45-1-1-1H8c-.55 0-1 .45-1 1z"
              fill="#000"
              fill-opacity=".54"
              fill-rule="evenodd"
            />
          </svg>
          <span
            class="c9 c10"
            textalign="initial"
            textcolor="inherit"
            textvariant="button2"
          >
            Test2
          </span>
        </button>
      </div>
      <span
        class="c9 c11"
        textalign="initial"
        textcolor="inherit"
        textvariant="body3"
      >
        2 Rows Selected
      </span>
    </div>
  </div>
</div>
`;

exports[`ActionBar component should render correctly with all the default props 1`] = `
.c8 {
  overflow: visible;
  font-size: 2rem;
  transition: all 100ms linear;
  cursor: inherit;
}

.c8 * {
  fill-opacity: 1;
  transition: all 100ms linear;
  fill: #607890;
}

.c10 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 600;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  text-align: initial;
  display: inline-block;
}

.c11 {
  margin: 0;
  color: inherit;
  font-size: 1.2rem;
  font-weight: 400;
  letter-spacing: 0rem;
  line-height: 1.6rem;
  text-align: initial;
  display: inline-block;
}

.c6 {
  border: none;
  position: relative;
  user-select: none;
  font-family: inherit;
  text-decoration: none;
  transition: all 100ms ease-out;
  padding: 0.8rem 2.4rem 1rem;
  border-radius: 0.8rem;
  display: inline-flex;
  justify-content: center;
  align-items: center;
}

.c6,
.c6 .c9,
.c6 .c7,
.c6 .c7 * {
  transition: all 100ms ease-out;
}

.c6:hover {
  cursor: pointer;
}

.c6:focus {
  outline: none;
}

.c6:disabled {
  cursor: not-allowed;
}

.c6:disabled {
  color: #98A7B7;
  background: #dfe4e9;
}

.c6:disabled .c7 * {
  fill: #98A7B7;
}

.c6:not(:disabled):not(:hover) {
  color: #ffffff;
  background: #3872D2;
}

.c6:not(:disabled):not(:hover) .c7 * {
  fill: #ffffff;
}

.c6:not(:disabled):active {
  color: #ffffff;
  background: #275093;
}

.c6:not(:disabled):active .c7 * {
  fill: #ffffff;
}

.c6:not(:disabled):not(:active):hover {
  color: #ffffff;
  background: #3061B3;
  box-shadow: 0 0.2rem 0.8rem rgba(48,97,179,0.35);
}

.c6:not(:disabled):not(:active):hover .c7 * {
  fill: #ffffff;
}

.c6 .c7+.c9 {
  margin-left: 0.8rem;
}

.c6 .c9+.c7 {
  margin-left: 0.8rem;
}

.c0 {
  position: relative;
  display: inline-flex;
}

.c2 {
  z-index: 4;
  position: absolute;
  bottom: calc(100% + 1.5rem);
  left: 50%;
  transform: translateX(-50%);
  border-radius: 0.8rem;
  padding: 1.5rem 2rem;
  box-shadow: 0 0.4rem 1.6rem rgba(176,188,200,0.5);
}

.c2::after {
  content: '';
  width: 0;
  height: 0;
  z-index: 4;
  position: absolute;
  border-left: 0.8rem solid transparent;
  border-right: 0.8rem solid transparent;
  border-top: 1rem solid;
}

.c2::after {
  transform: translateX(-50%);
  top: 100%;
  left: 50%;
}

.c1 {
  width: 100%;
}

.c3 {
  display: flex;
  align-items: center;
  justify-content: space-between;
  background: #3872D2;
  width: 100%;
  height: max-height;
  padding: 0;
  bottom: 0.6rem;
  transform: none;
  left: auto;
  box-shadow: 0 0.4rem 1.6rem rgba(48,97,179,0.2);
}

.c3::after {
  left: 2.4rem;
  border-top-color: #3872D2;
}

.c3>.c9 {
  margin-right: 1.6rem;
  color: #ffffff;
}

.c4 {
  display: flex;
  flex-flow: row wrap;
  width: 80%;
}

.c4>.c5 {
  margin: 0.8rem 1.6rem 0.8rem 0.8rem;
  border: 0.1rem solid #ffffff;
  height: 3.2rem;
}

.c4>.c5:not(:last-child)::before {
  content: '';
  position: absolute;
  left: calc(100% + 0.8rem);
  width: 0.1rem;
  height: 2.4rem;
  background: #dfe4e9;
  margin: auto;
  top: 0;
  bottom: 0;
}

.c4>:not(:first-child) {
  margin-left: 0;
}

<div>
  <div
    class="c0 c1"
  >
    <div
      class="c2 c3"
      placement="top"
    >
      <div
        class="c4"
      >
        <button
          class="c5 c6"
          edges="square"
          type="button"
          variant="solid"
        >
          <svg
            class="c7 c8"
            fill="none"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M2 12C2 6.48 6.48 2 12 2s10 4.48 10 10-4.48 10-10 10S2 17.52 2 12zm5 0c0 .55.45 1 1 1h8c.55 0 1-.45 1-1s-.45-1-1-1H8c-.55 0-1 .45-1 1z"
              fill="#000"
              fill-opacity=".54"
              fill-rule="evenodd"
            />
          </svg>
          <span
            class="c9 c10"
            textalign="initial"
            textcolor="inherit"
            textvariant="button2"
          >
            Lorem
          </span>
        </button>
      </div>
      <span
        class="c9 c11"
        textalign="initial"
        textcolor="inherit"
        textvariant="body3"
      >
        1 Rows Selected
      </span>
    </div>
  </div>
</div>
`;
